feat: add register api
