# models/user/request/user_auth.go
@@ -1,6 +1,0 @@
-package request
-
-type LoginForm struct {
-	Email    string `json:"email" binding:"required"`
-	Password string `json:"password"`
-}
